--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,12 +37,113 @@ body {
     background-color: #007bff;
     color: white;
   }
+  .btn-red{
+    background-color: transparent;
+    border: 3px solid #007bff;
+    height: 4rem;
+    width: 8rem;
+    font-weight: 700;
+    color: #007bff;
+  }
+  .btn-red:hover{
+    background-color: #007bff;
+    color: white;
+  }
   
   .btn-start-campaign:hover {
     background-color: #0056b3;
+  }
+  .card-img-top {
+    object-fit: cover;
+    width: 100%;
+    height: 150px;
+  }
+
+  /* Styling for navigation buttons */
+  .navigation-buttons {
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+  }
+
+  .navigation-buttons button {
+    width: 40px;
+  }
+
+  .left-button {
+    margin-right: auto;
+  }
+
+  .right-button {
+    margin-left: auto;
   }
   
   .container-fluid {
     width: 90%;
   }
+  .container-background{
+    background-color: #00396b;
+    width: 100%;
+    height: 200px;
+  }
+  .beautiful-header {
+    background-color: #f5f5f5;
+    padding: 60px 0;
+    text-align: center;
+  }
   
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: auto;
+    margin: 0 auto;
+  }
+  
+  .left-content {
+    flex: 1;
+    padding: 0 20px;
+    text-align: left;
+    padding-left: 130px;
+  }
+  
+  .header-title {
+    font-family: 'Li Ador Noirrit';
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    
+  }
+  
+  .header-description {
+    font-family: 'Li Ador Noirrit';
+    font-size: 24px;
+    color: #666;
+  }
+  
+  .right-content {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+    padding-right: 130px;
+    text-align: right;
+  }
+  
+  .image-box {
+    width: 50vh;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .image-box img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+  }
+  .card-img-top {
+    object-fit: cover; 
+    width: 100%;
+    height: 250px;
+  }
