--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -147,3 +147,22 @@ body {
     width: 100%;
     height: 250px;
   }
+  .s-story{
+    width: 100%;
+    background-color: #f5f5f5;
+  }
+  .success-story {
+    display: flex;
+    align-items: center;
+    padding:50px 0px 50px 0px; 
+}
+
+.success-image {
+    max-width: 30%;
+    height: auto;
+    margin-right: 50px;
+    border-radius: 10px;
+}
+p{
+  text-align: justify;
+}
