--- a/AmarDaan/templates/index.html
+++ b/AmarDaan/templates/index.html
@@ -11,41 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  <style>
-
-  </style>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-		<img class="logo" src="resources/images/logo.png">
-	</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav" style="height: 60px;">
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Campaign</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login/Signup</a>
-        </li>
-        <li class="nav-item">
-          <button class="btn btn-start-campaign">Start Campaign</button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 <header class="beautiful-header">
   <div class="header-content">
     <div class="left-content">
@@ -107,7 +74,7 @@
               <div class="success-story">
                   <img src="resources/images/header-img-4.jpg" alt="Success Image" class="success-image">
                   <div>
-                      <h1>Bangladeshi Entrepreneur Builds Solar-Powered Schools with AmarDaan Crowdfunding</h1>
+                      <h1>Empowering Bangladesh</h1>
                       <p>In the heart of a small town, Kulsum's life changed dramatically, thanks to AmarDaan's devoted donors. Despite financial struggles, Kulsum's determination led her to the organization's door. Through their support, she accessed education and skill development, paving the path to her dreams.
 
                         AmarDaan's donors didn't just offer financial assistance; they became the driving force behind Kulsum's ambitions. With newfound skills and unwavering encouragement, she conquered challenges and emerged as a beacon of hope within her community.
@@ -122,8 +89,144 @@
     </div>
   </div>
 </div>
-
-
+<div class="container">
+  <div class="flex-container">
+    <div class="box col-lg-6 img1">
+      <div class="ct-text">
+        <h1>Discover amazing fundraising campaigns</h1>
+      </div>
+      <button class="btn btn-start-campaign"> Fund Someone</button>
+    </div>
+    <div class="box col-lg-6 img2">
+      <div class="ct-text">
+        <h1>Create your own campaign now</h1>
+      </div>
+      <button class="btn btn-start-campaign"> Start Fundraising</button>
+    </div>
+  </div>
+</div>
+</div>
+<div class="form-container">
+  <div class="contact-us">
+    <div class="container-contact1 snipcss-2BGmQ">
+          <div class="contact1-pic js-tilt" data-tilt="">
+            <img src="https://colorlib.com/etc/cf/ContactFrom_v1/images/img-01.png" alt="IMG">
+          </div>
+          <form class="contact1-form validate-form">
+            <span class="contact1-form-title">
+              Get in touch
+            </span>
+            <div class="wrap-input1 validate-input" data-validate="Name is required">
+              <input class="input1" type="text" name="name" placeholder="Name">
+              <span class="shadow-input1">
+              </span>
+            </div>
+            <div class="wrap-input1 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+              <input class="input1" type="text" name="email" placeholder="Email">
+              <span class="shadow-input1">
+              </span>
+            </div>
+            <div class="wrap-input1 validate-input" data-validate="Subject is required">
+              <input class="input1" type="text" name="subject" placeholder="Subject">
+              <span class="shadow-input1">
+              </span>
+            </div>
+            <div class="wrap-input1 validate-input" data-validate="Message is required">
+              <textarea class="input1" name="message" placeholder="Message">
+              </textarea>
+              <span class="shadow-input1">
+              </span>
+            </div>
+            <div class="container-contact1-form-btn">
+              <button class="contact1-form-btn">
+                <span>
+                  Send Email
+                  <i class="fa fa-long-arrow-right" aria-hidden="true">
+                  </i>
+                </span>
+              </button>
+            </div>
+          </form>
+        </div>
+</div>
+</div>
+<div class="footer-section">
+  <footer id="footer" class="footer-1">
+    <div class="main-footer widgets-dark typo-light">
+    <div class="container">
+    <div class="row">
+      
+    <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="widget subscribe no-box">
+    <h5 class="widget-title">AmarDaan<span></span></h5>
+    <p>Empowering dreams, changing lives in Bangladesh through impactful crowdfunding. </p>
+    </div>
+    </div>
+    
+    <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="widget no-box">
+    <h5 class="widget-title">Quick Links<span></span></h5>
+    <ul class="thumbnail-widget">
+    <li>
+    <div class="thumb-content"><a href="#.">Get Started</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">Top Leaders</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">Success Stories</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">Event/Tickets</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">News</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">Lifestyle</a></div>	
+    </li>
+    <li>
+    <div class="thumb-content"><a href="#.">About</a></div>	
+    </li>
+    </ul>
+    </div>
+    </div>
+    
+    <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="widget no-box">
+    <h5 class="widget-title">Get Started<span></span></h5>
+    <p>Get access to your full Training and Marketing Suite.</p>
+    <a class="btn" href="https://bit.ly/3m9avif" target="_blank">Subscribe Now</a>
+    </div>
+    </div>
+    
+    <div class="col-xs-12 col-sm-6 col-md-3">
+    
+    <div class="widget no-box">
+    <h5 class="widget-title">Contact Us<span></span></h5>
+    
+    <p><a href="mailto:info@domain.com" title="glorythemes">info@domain.com</a></p>
+    <ul class="social-footer2">
+      <li><a href="https://www.twitter.com/AmarDaan">Twitter</a></li>
+    </ul>
+    </div>
+    </div>
+    
+    </div>
+    </div>
+    </div>
+      
+    <div class="footer-copyright">
+    <div class="container">
+    <div class="row">
+    <div class="col-md-12 text-center">
+    <p>Copyright AmarDaan © 2023. All rights reserved.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </footer>
+</div>
 <script>
   const headerImage = document.getElementById("headerImage");
   const imageSources = ["./resources/images/header-img-1.jpg","./resources/images/header-img-3.jpg", "./resources/images/header-img-4.jpg", "./resources/images/header-img-5.jpg" , "./resources/images/header-img-6.jpg"]; 
@@ -135,7 +238,7 @@
     headerImage.src = imageSources[currentImageIndex];
   }
 
-  setInterval(changeImage, 10000); 
+  setInterval(changeImage, 3000); 
 </script>
 
 <script>
@@ -201,7 +304,19 @@
   updateCards();
 </script>
 
+<script>
+const signUpButton = document.getElementById('signUp');
+const signInButton = document.getElementById('signIn');
+const container = document.getElementById('container');
 
+signUpButton.addEventListener('click', () => {
+	container.classList.add("right-panel-active");
+});
+
+signInButton.addEventListener('click', () => {
+	container.classList.remove("right-panel-active");
+});
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
