--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}AmarDaan | Empowering Dreams, Transforming Lives{% endblock %}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="resources/css/style.css">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/footer.css')}}"
+  {% block link %}
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
+  {% endblock %}
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/navbar.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +18,39 @@
 </head>
 
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{url_for('views.home')}}">
+              <img class="logo" src="{{url_for('static', filename='/images/logo.png')}}">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav" style="height: 60px;">
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Campaign</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.login')}}">Login/Signup</a>
+              </li>
+              <li class="nav-item">
+                <button class="btn btn-start-campaign">Start Campaign</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      {% block content %} {% endblock %}
+      <footer>
+        <p>All rights reserved <i class="fa fa-heart"></i> by <a target="_blank" href="https://florin-pop.com">AmarDaan</a></p>
+      </footer>
 </body>
 
 </html>
