--- a/AmarDaan/static/css/footer.css
+++ b/AmarDaan/static/css/footer.css
@@ -1,4 +1,7 @@
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: 'Bai Jamjuree', sans-serif;
     background-color: #222;
     color: #fff;
