--- a/AmarDaan/templates/user_form.html
+++ b/AmarDaan/templates/user_form.html
@@ -9,7 +9,7 @@
   <div class="frm-body">
   <div class="container" id="container">
     <div class="form-container sign-up-container">
-      <form action="#">
+      <form action="{{url_for('auth.signup')}}" method="POST">
         <h1>Create Account</h1>
         <div class="social-container">
           <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -17,23 +17,37 @@
           <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <span>or use your email for registration</span>
-        <input class="round" type="text" placeholder="Name" />
-        <input class="round" type="email" placeholder="Email" />
-        <input class="round" type="password" placeholder="Password" />
+        <input class="round" type="text" name="text" placeholder="Name" />
+        <input class="round" type="email" name="email" placeholder="Email" />
+        <input class="round" type="password" name="password" placeholder="Password" />
         <button>Sign Up</button>
       </form>
     </div>
     <div class="form-container sign-in-container">
-      <form action="#">
+      <form action="{{url_for('auth.login')}}" method="POST">
         <h1>Sign in</h1>
+        
         <div class="social-container">
           <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
           <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
         </div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category == 'error' %}
+            <div class="alert alert-danger alter-dismissible fade show" role="alert"> {{ message }}
+              </div>
+            {% else %}
+            <div class="alert alert-success alter-dismissible fade show" role="alert"> {{ message }}
+              </div>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
         <span>or use your account</span>
-        <input class="round" type="email" placeholder="Email" />
-        <input class="round" type="password" placeholder="Password" />
+        <input class="round" type="email" name="email" placeholder="Email" />
+        <input class="round" type="password" name="password" placeholder="Password" />
         <a href="#">Forgot your password?</a>
         <button>Sign In</button>
       </form>
