--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -32,12 +32,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Campaign</a>
               </li>
+              {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link" href="{{url_for('views.dashboard')}}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('auth.login')}}">Login/Signup</a>
+                <a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a>
               </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.logout')}}">Login / Signup</a>
+              </li>
+              {% endif %}
               <li class="nav-item">
                 <button class="btn btn-start-campaign">Start Campaign</button>
               </li>
