Working with user campaign forum

--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Campaign</a>
+                <a class="nav-link" href="{{url_for('views.campaign')}}">Campaign</a>
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
