--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -6,62 +6,111 @@
 <div class="header">
     <h1>Start Your Fundraiser</h1>
 </div>
-<div class="container">
-    <div class="sidebar-steps fixed snipcss-hRotg style-UDfJt" id="style-UDfJt">
-        <div class="step active" onclick="navigateToStep(1)">
-          <a class="step-header">
-            <span class="btn btn-circle btn-edit" id="st1-circle">
-              1
-            </span>
-            <div class="step-title">
-              Get Started
-            </div>
-          </a>
-          <div class="text">
-            Set essential fundraiser details such as fundraiser title, target and currency
-          </div>
+<div class="layout-container">
+    <div class="layout">
+        <div class="container1">
+            <div class="sidebar-steps fixed snipcss-hRotg style-UDfJt" id="style-UDfJt">
+                <div class="step active" onclick="navigateToStep(1)">
+                <a class="step-header">
+                    <span class="btn btn-circle btn-edit" id="st1-circle">
+                    1
+                    </span>
+                    <div class="step-title">
+                    Get Started
+                    </div>
+                </a>
+                <div class="text">
+                    Set essential fundraiser details such as fundraiser title, target and currency
+                </div>
+                </div>
+                <div class="step" onclick="navigateToStep(2)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st2-circle">
+                    2
+                    </span>
+                    <div class="step-title">
+                    Fundraiser Story
+                    </div>
+                </a>
+                <div class="text">
+                    Tell your story! Add your description, images, videos and more
+                </div>
+                </div>
+                <div class="step" onclick="navigateToStep(3)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st3-circle">
+                    3
+                    </span>
+                    <div class="step-title">
+                    Final Details
+                    </div>
+                </a>
+                <div class="text">
+                    Add team members, customize visibility, and more
+                </div>
+                </div>
+                <div class="step" onclick="navigateToStep(4)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st4-circle">
+                    4
+                    </span>
+                    <div class="step-title">
+                    Payment Methods
+                    </div>
+                </a>
+                <div class="text">
+                    Enable payment processors for your fundraising page
+                </div>
+                </div>
+            </div>    
         </div>
-        <div class="step" onclick="navigateToStep(2)">
-          <a class="step-header">
-            <span class="btn btn-circle" id="st2-circle">
-              2
-            </span>
-            <div class="step-title">
-              Fundraiser Story
-            </div>
-          </a>
-          <div class="text">
-            Tell your story! Add your description, images, videos and more
-          </div>
+        <div class="container2">
+            <div class="sidebar-steps fixed snipcss-hRotg style-UDfJt" id="style-UDfJt">
+                <div class="step active" onclick="navigateToStep(1)">
+                    <span id="st1-circle">
+                        </span>
+                        <h1>H1</h1>
+                </div>
+
+                </div>
+                <div class="step" onclick="navigateToStep(2)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st2-circle">
+                    </span>
+                </div>
+                <div class="step" onclick="navigateToStep(3)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st3-circle">
+                    3
+                    </span>
+                    <div class="step-title">
+                    Final Details
+                    </div>
+                </a>
+                <div class="text">
+                    Add team members, customize visibility, and more
+                </div>
+                </div>
+                <div class="step" onclick="navigateToStep(4)">
+                <a class="step-header">
+                    <span class="btn btn-circle" id="st4-circle">
+                    4
+                    </span>
+                    <div class="step-title">
+                    Payment Methods
+                    </div>
+                </a>
+                <div class="text">
+                    Enable payment processors for your fundraising page
+                </div>
+                </div>
+            </div>    
         </div>
-        <div class="step" onclick="navigateToStep(3)">
-          <a class="step-header">
-            <span class="btn btn-circle" id="st3-circle">
-              3
-            </span>
-            <div class="step-title">
-              Final Details
-            </div>
-          </a>
-          <div class="text">
-            Add team members, customize visibility, and more
-          </div>
         </div>
-        <div class="step" onclick="navigateToStep(4)">
-          <a class="step-header">
-            <span class="btn btn-circle" id="st4-circle">
-              4
-            </span>
-            <div class="step-title">
-              Payment Methods
-            </div>
-          </a>
-          <div class="text">
-            Enable payment processors for your fundraising page
-          </div>
-        </div>
-      </div>    
+    </div>
 </div>
+
+
 <script>
 function navigateToStep(stepNumber) {
   // Remove the 'active' class from all steps
