--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -64,19 +64,33 @@
                 </div>
             </div>    
         </div>
-        <div class="container2">
+        <div class="container1">
             <div class="sidebar-steps fixed snipcss-hRotg style-UDfJt" id="style-UDfJt">
                 <div class="step active" onclick="navigateToStep(1)">
-                    <span id="st1-circle">
-                        </span>
-                        <h1>H1</h1>
+                <a class="step-header">
+                    <span class="btn btn-circle btn-edit" id="st1-circle">
+                    1
+                    </span>
+                    <div class="step-title">
+                    Get Started
+                    </div>
+                </a>
+                <div class="text">
+                    Set essential fundraiser details such as fundraiser title, target and currency
                 </div>
-
                 </div>
                 <div class="step" onclick="navigateToStep(2)">
                 <a class="step-header">
                     <span class="btn btn-circle" id="st2-circle">
+                    2
                     </span>
+                    <div class="step-title">
+                    Fundraiser Story
+                    </div>
+                </a>
+                <div class="text">
+                    Tell your story! Add your description, images, videos and more
+                </div>
                 </div>
                 <div class="step" onclick="navigateToStep(3)">
                 <a class="step-header">
@@ -107,8 +121,7 @@
             </div>    
         </div>
         </div>
-    </div>
-</div>
+        </div>
 
 
 <script>
