Added Campaign Page!
User Can Now select zilla, upzilla and division using dropdown menu.

--- a/AmarDaan/templates/index.html
+++ b/AmarDaan/templates/index.html
@@ -120,8 +120,7 @@
               </span>
             </div>
             <div class="wrap-input1 validate-input" data-validate="Message is required">
-              <textarea class="input1" name="message" placeholder="Message">
-              </textarea>
+              <textarea class="input1" name="message" placeholder="Message"></textarea>
               <span class="shadow-input1">
               </span>
             </div>
