--- a/amardaan/templates/dashboard.html
+++ b/amardaan/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block link %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/dashboard.css')}}">
 <style>
     .form-body{
         width: 50%;
